--- a/index.html
+++ b/index.html
@@ -3,216 +3,211 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Dr. Laylan Bramasole | Data Analyst</title>
+    <title>Dr. Laylan Bramasole | Data Science Portfolio</title>
     <style>
         :root {
-            --primary-dark: #1a1a1a;
-            --accent-blue: #0077b5; /* LinkedIn Blue */
-            --soft-gray: #fcfcfc;
-            --border-color: #e0e0e0;
+            --primary-bg: #ffffff;
+            --accent-gradient: linear-gradient(135deg, #0984e3, #6c5ce7);
+            --glass-bg: rgba(255, 255, 255, 0.8);
+            --text-dark: #1e272e;
         }
 
         body {
-            font-family: 'Inter', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, sans-serif;
+            font-family: 'Inter', sans-serif;
             margin: 0;
-            background-color: #ffffff;
-            color: var(--primary-dark);
-            line-height: 1.7;
+            background: #f0f2f5;
+            color: var(--text-dark);
+            overflow-x: hidden;
         }
 
-        /* Abstract Artistic Background */
-        .bg-art {
+        /* Artistic Background Graphics */
+        .blob {
             position: fixed;
-            top: 0;
-            right: 0;
-            width: 100%;
-            height: 100%;
-            background: 
-                radial-gradient(circle at 90% 10%, rgba(0, 119, 181, 0.03) 0%, transparent 40%),
-                radial-gradient(circle at 10% 90%, rgba(108, 92, 231, 0.02) 0%, transparent 40%);
+            width: 500px;
+            height: 500px;
+            background: var(--accent-gradient);
+            filter: blur(80px);
+            opacity: 0.15;
+            border-radius: 50%;
             z-index: -1;
+            animation: move 20s infinite alternate;
+        }
+
+        @keyframes move {
+            from { transform: translate(-10%, -10%); }
+            to { transform: translate(20%, 20%); }
         }
 
         .container {
-            max-width: 850px;
-            margin: 0 auto;
-            padding: 100px 24px;
+            max-width: 1000px;
+            margin: 50px auto;
+            padding: 40px;
+            background: var(--glass-bg);
+            backdrop-filter: blur(10px);
+            border-radius: 30px;
+            box-shadow: 0 20px 50px rgba(0,0,0,0.05);
+            border: 1px solid rgba(255,255,255,0.3);
         }
 
-        header { margin-bottom: 50px; }
+        header {
+            text-align: center;
+            padding-bottom: 40px;
+            border-bottom: 2px solid #eee;
+        }
 
         h1 {
-            font-size: 3.2rem;
+            font-size: 3.8rem;
             margin: 0;
-            letter-spacing: -1.5px;
+            background: var(--accent-gradient);
+            -webkit-background-clip: text;
+            -webkit-text-fill-color: transparent;
             font-weight: 800;
         }
 
-        .role-title {
-            font-size: 1.4rem;
-            color: var(--accent-blue);
-            font-weight: 400;
-            margin-top: 5px;
-            letter-spacing: 1px;
-            text-transform: uppercase;
-        }
-
-        .bio {
-            font-size: 1.15rem;
-            color: #444;
-            margin-bottom: 40px;
-            border-left: 2px solid var(--border-color);
-            padding-left: 30px;
-        }
-
-        /* Navigation Tabs */
-        .nav-links {
-            display: flex;
-            flex-wrap: wrap;
-            gap: 12px;
-            margin-bottom: 60px;
-        }
-
-        .tab {
-            padding: 8px 22px;
-            border: 1px solid var(--border-color);
-            border-radius: 30px;
-            text-decoration: none;
-            color: var(--primary-dark);
-            font-size: 0.85rem;
-            font-weight: 600;
-            transition: all 0.3s ease;
-        }
-
-        .tab:hover {
-            background-color: var(--primary-dark);
+        .role-tag {
+            display: inline-block;
+            background: var(--text-dark);
             color: white;
-            border-color: var(--primary-dark);
-        }
-
-        /* Skills Grid */
-        .skills-section {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-            gap: 20px;
-            margin-bottom: 80px;
-        }
-
-        .skill-category h3 {
+            padding: 5px 20px;
+            border-radius: 50px;
             font-size: 0.9rem;
             text-transform: uppercase;
-            letter-spacing: 1px;
-            color: #888;
-            margin-bottom: 15px;
+            letter-spacing: 2px;
+            margin-top: 15px;
         }
 
-        .skill-list {
-            list-style: none;
-            padding: 0;
-            margin: 0;
-            font-weight: 500;
+        .bio-section {
+            display: grid;
+            grid-template-columns: 1fr;
+            gap: 30px;
+            padding: 40px 0;
+            font-size: 1.2rem;
+            line-height: 1.8;
+            text-align: center;
         }
 
-        /* Projects Section */
-        .projects-section {
-            border-top: 1px solid var(--border-color);
-            padding-top: 60px;
+        /* Visual Skill Badges */
+        .skills-container {
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
+            gap: 10px;
+            margin: 30px 0;
         }
 
-        .project-tagline {
-            font-style: italic;
-            color: #636e72;
-            display: block;
-            margin-bottom: 30px;
+        .skill-chip {
+            background: white;
+            padding: 8px 18px;
+            border-radius: 50px;
+            border: 1px solid #ddd;
+            font-size: 0.85rem;
+            font-weight: 600;
+            box-shadow: 0 4px 6px rgba(0,0,0,0.02);
+            transition: 0.3s;
         }
 
-        .project-card {
-            background: var(--soft-gray);
-            padding: 30px;
-            border-radius: 15px;
+        .skill-chip:hover {
+            border-color: #6c5ce7;
+            transform: scale(1.05);
+        }
+
+        /* Nav Buttons as "Floating Glass" tabs */
+        .nav-tabs {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px 0 50px;
+        }
+
+        .nav-btn {
             text-decoration: none;
-            display: block;
-            transition: all 0.3s ease;
-            border: 1px solid transparent;
+            color: var(--text-dark);
+            padding: 12px 25px;
+            border-radius: 15px;
+            background: white;
+            box-shadow: 0 4px 15px rgba(0,0,0,0.05);
+            font-weight: 700;
+            transition: 0.3s;
+        }
+
+        .nav-btn:hover {
+            background: var(--accent-gradient);
+            color: white;
+        }
+
+        /* Project Gallery Style */
+        .project-card {
+            background: white;
+            border-radius: 20px;
+            overflow: hidden;
+            text-decoration: none;
+            color: inherit;
+            display: flex;
+            flex-direction: column;
+            transition: 0.4s;
+            border: 1px solid #eee;
         }
 
         .project-card:hover {
-            border-color: var(--accent-blue);
-            background: #fff;
-            transform: translateY(-5px);
-            box-shadow: 0 10px 30px rgba(0,0,0,0.05);
+            transform: translateY(-10px);
+            box-shadow: 0 30px 60px rgba(0,0,0,0.1);
         }
 
-        .project-card h4 {
-            margin: 0 0 10px 0;
-            font-size: 1.4rem;
-            color: var(--primary-dark);
+        .project-image-placeholder {
+            height: 200px;
+            background: var(--accent-gradient);
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            color: white;
+            font-size: 3rem;
         }
 
-        .project-card p {
-            margin: 0;
-            color: #666;
-            font-size: 1rem;
+        .project-info {
+            padding: 25px;
         }
 
     </style>
 </head>
 <body>
 
-    <div class="bg-art"></div>
+    <div class="blob"></div>
 
     <div class="container">
         <header>
             <h1>Dr. Laylan Bramasole</h1>
-            <div class="role-title">Data Analyst</div>
+            <div class="role-tag">Data Analyst • PhD</div>
         </header>
 
-        <section class="bio">
-            I am a Data Analyst with a PhD in Cellular Biology and a decade of experience managing high-stakes research. I combine a veteran's eye for data cleaning and rigorous statistical reasoning with a modern technical toolkit to deliver evidence-based conclusions across the business, clinical, and health sectors.
-        </section>
-
-        <nav class="nav-links">
-            <a href="https://de.linkedin.com/in/lylan-bramasole-01031b157" target="_blank" class="tab">LinkedIn</a>
-            <a href="https://github.com/L-Bramasole" target="_blank" class="tab">GitHub Repository</a>
-            <a href="https://scholar.google.com/citations?hl=en&user=3_ZfOckAAAAJ" class="tab">Scientific Papers</a>
-        </nav>
-
-        <section class="skills-section">
-            <div class="skill-category">
-                <h3>Programming & Data</h3>
-                <ul class="skill-list">
-                    <li>Python (Pandas, NumPy)</li>
-                    <li>SQL</li>
-                    <li>Excel</li>
-                </ul>
-            </div>
-            <div class="skill-category">
-                <h3>Visualization</h3>
-                <ul class="skill-list">
-                    <li>Matplotlib & Plotly</li>
-                    <li>Tableau</li>
-                    <li>Python Dashboards</li>
-                </ul>
-            </div>
-            <div class="skill-category">
-                <h3>Advanced Analytics</h3>
-                <ul class="skill-list">
-                    <li>NLP (NER)</li>
-                    <li>K-means Clustering</li>
-                    <li>Prediction Models</li>
-                </ul>
+        <section class="bio-section">
+            <p>I am a Data Analyst with a PhD in Cellular Biology background and a decade of experience managing high-stakes research. I transform complex biological datasets into clear, actionable narratives.</p>
+            
+            <div class="skills-container">
+                <span class="skill-chip">Python</span><span class="skill-chip">SQL</span>
+                <span class="skill-chip">Pandas</span><span class="skill-chip">Matplotlib</span>
+                <span class="skill-chip">NLP/NER</span><span class="skill-chip">K-means</span>
+                <span class="skill-chip">Prediction Models</span><span class="skill-chip">Tableau</span>
+                <span class="skill-chip">Dashboards</span>
             </div>
         </section>
 
-        <section class="projects-section">
-            <h2>Projects</h2>
-            <span class="project-tagline">"Let your project be my next Analysis"</span>
+        <div class="nav-tabs">
+            <a href="https://de.linkedin.com/in/lylan-bramasole-01031b157" target="_blank" class="nav-btn">LinkedIn</a>
+            <a href="https://github.com/L-Bramasole" target="_blank" class="nav-btn">GitHub</a>
+            <a href="https://scholar.google.com/citations?hl=en&user=3_ZfOckAAAAJ" target="_blank" class="nav-btn">Scientific Papers</a>
+        </div>
 
-            <a href="https://l-bramasole.github.io/German_2025_Job_Market_Strtegic_Analysis/" class="project-card">
-                <h4>German 2025 Job Market Strategic Analysis</h4>
-                <p>Strategic insights into labor trends using Python and rigorous statistical modeling.</p>
-            </a>
-        </section>
+        <h2 style="text-align:center; font-size: 2rem;">Projects</h2>
+        <p style="text-align:center; font-style: italic; color: #666; margin-bottom: 40px;">"Let your project be my next Analysis"</p>
+
+        <a href="https://l-bramasole.github.io/German_2025_Job_Market_Strtegic_Analysis/" class="project-card">
+            <div class="project-image-placeholder">📊</div>
+            <div class="project-info">
+                <h3>German 2025 Job Market Strategic Analysis</h3>
+                <p>A deep dive into labor trends using advanced statistical modeling and Python visualization.</p>
+                <small style="color: #6c5ce7; font-weight: bold;">Click to view project →</small>
+            </div>
+        </a>
     </div>
 
 </body>
