--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
             --accent-gradient: linear-gradient(135deg, #0984e3, #6c5ce7);
             --glass-bg: rgba(255, 255, 255, 0.8);
             --text-dark: #1e272e;
+            --light-blue: #e3f2fd; /* Light blue for tabs */
+            --hover-blue: #bbdefb;
         }
 
         body {
@@ -39,7 +41,7 @@
         }
 
         .container {
-            max-width: 1000px;
+            max-width: 1100px;
             margin: 50px auto;
             padding: 40px;
             background: var(--glass-bg);
@@ -50,13 +52,29 @@
         }
 
         header {
-            text-align: center;
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
             padding-bottom: 40px;
             border-bottom: 2px solid #eee;
+            gap: 20px;
+        }
+
+        .header-content {
+            text-align: left;
+        }
+
+        .profile-img {
+            width: 120px;
+            height: 120px;
+            border-radius: 50%;
+            object-fit: cover;
+            border: 4px solid white;
+            box-shadow: 0 10px 20px rgba(0,0,0,0.1);
         }
 
         h1 {
-            font-size: 3.8rem;
+            font-size: 3.5rem;
             margin: 0;
             background: var(--accent-gradient);
             -webkit-background-clip: text;
@@ -77,65 +95,112 @@
         }
 
         .bio-section {
-            display: grid;
-            grid-template-columns: 1fr;
-            gap: 30px;
             padding: 40px 0;
-            font-size: 1.2rem;
+            font-size: 1.1rem;
             line-height: 1.8;
-            text-align: center;
         }
 
-        /* Visual Skill Badges */
-        .skills-container {
+        /* Horizontal Skills Row */
+        .skills-horizontal-container {
             display: flex;
             flex-wrap: wrap;
+            align-items: center;
             justify-content: center;
-            gap: 10px;
-            margin: 30px 0;
+            gap: 30px;
+            margin-top: 40px;
+            padding: 20px;
+            background: rgba(255,255,255,0.4);
+            border-radius: 20px;
+        }
+
+        .skill-group {
+            display: flex;
+            align-items: center;
+            gap: 15px;
+        }
+
+        .skill-circle {
+            min-width: 100px;
+            height: 100px;
+            background: #000;
+            color: white;
+            border-radius: 50%;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            font-size: 0.75rem;
+            font-weight: bold;
+            letter-spacing: 1px;
+            padding: 10px;
+            line-height: 1.2;
+            text-transform: uppercase;
+        }
+
+        .skill-list-horizontal {
+            list-style: none;
+            padding: 0;
+            margin: 0;
+            font-size: 0.9rem;
+            color: #444;
+            border-right: 1px solid #ddd;
+            padding-right: 25px;
+        }
+
+        .skill-list-horizontal:last-child {
+            border-right: none;
+        }
+
+        .tools-chips-horizontal {
+            display: flex;
+            flex-wrap: wrap;
+            gap: 6px;
+            max-width: 300px;
         }
 
         .skill-chip {
             background: white;
-            padding: 8px 18px;
+            padding: 4px 10px;
             border-radius: 50px;
             border: 1px solid #ddd;
-            font-size: 0.85rem;
+            font-size: 0.75rem;
             font-weight: 600;
-            box-shadow: 0 4px 6px rgba(0,0,0,0.02);
-            transition: 0.3s;
+            box-shadow: 0 2px 4px rgba(0,0,0,0.02);
         }
 
-        .skill-chip:hover {
-            border-color: #6c5ce7;
-            transform: scale(1.05);
-        }
-
-        /* Nav Buttons as "Floating Glass" tabs */
+        /* Nav Buttons */
         .nav-tabs {
             display: flex;
             justify-content: center;
-            gap: 20px;
-            margin: 20px 0 50px;
+            gap: 15px;
+            margin: 30px 0 50px;
         }
 
         .nav-btn {
             text-decoration: none;
             color: var(--text-dark);
-            padding: 12px 25px;
-            border-radius: 15px;
-            background: white;
+            padding: 10px 20px;
+            border-radius: 12px;
+            background: var(--light-blue);
             box-shadow: 0 4px 15px rgba(0,0,0,0.05);
             font-weight: 700;
+            font-size: 0.9rem;
             transition: 0.3s;
+            border: 1px solid #c3dae8;
         }
 
         .nav-btn:hover {
-            background: var(--accent-gradient);
-            color: white;
+            background: var(--hover-blue);
+            transform: translateY(-2px);
         }
 
-        /* Project Gallery Style */
+        /* Project Gallery */
+        .project-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+            gap: 30px;
+        }
+
         .project-card {
             background: white;
             border-radius: 20px;
@@ -153,18 +218,23 @@
             box-shadow: 0 30px 60px rgba(0,0,0,0.1);
         }
 
-        .project-image-placeholder {
+        .project-image {
             height: 200px;
-            background: var(--accent-gradient);
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            color: white;
-            font-size: 3rem;
+            width: 100%;
+            object-fit: cover;
+            background: #eee;
         }
 
         .project-info {
             padding: 25px;
+        }
+
+        @media (max-width: 900px) {
+            .skills-horizontal-container { flex-direction: column; align-items: flex-start; }
+            .skill-list-horizontal { border-right: none; border-bottom: 1px solid #ddd; padding-bottom: 15px; width: 100%; }
+            header { flex-direction: column-reverse; text-align: center; }
+            .header-content { text-align: center; }
+            h1 { font-size: 2.8rem; }
         }
 
     </style>
@@ -175,39 +245,76 @@
 
     <div class="container">
         <header>
-            <h1>Dr. Laylan Bramasole</h1>
-            <div class="role-tag">Data Analyst • PhD</div>
+            <div class="header-content">
+                <h1>Dr. Laylan Bramasole</h1>
+                <div class="role-tag">Data Analyst • PhD</div>
+            </div>
+            <img src="Dr.Bramasole-Profile.jepg" alt="Dr. Bramasole" class="profile-img">
         </header>
 
         <section class="bio-section">
-            <p>I am a Data Analyst with a PhD in Cellular Biology background and a decade of experience managing high-stakes research. I transform complex biological datasets into clear, actionable narratives.</p>
+            <p style="text-align: center;">I am a Data Analyst with a PhD in Cellular Biology background and a decade of experience managing high-stakes research. I transform complex biological datasets into clear, actionable narratives.</p>
             
-            <div class="skills-container">
-                <span class="skill-chip">Python</span><span class="skill-chip">SQL</span>
-                <span class="skill-chip">Pandas</span><span class="skill-chip">Matplotlib</span>
-                <span class="skill-chip">NLP/NER</span><span class="skill-chip">K-means</span>
-                <span class="skill-chip">Prediction Models</span><span class="skill-chip">Tableau</span>
-                <span class="skill-chip">Dashboards</span>
+            <div class="skills-horizontal-container">
+                <!-- Group 1: Analytical Skills -->
+                <div class="skill-group">
+                    <div class="skill-circle">Analytical<br>Skills</div>
+                    <ul class="skill-list-horizontal">
+                        <li>• Data Mining</li>
+                        <li>• Data Cleaning</li>
+                        <li>• Data Merging</li>
+                        <li>• Descriptive Analysis</li>
+                        <li>• Deriving Variables</li>
+                        <li>• Data Storytelling</li>
+                    </ul>
+                </div>
+
+                <!-- Group 2: Tools -->
+                <div class="skill-group">
+                    <div class="skill-circle">Tools</div>
+                    <div class="tools-chips-horizontal">
+                        <span class="skill-chip">Python</span>
+                        <span class="skill-chip">SQL</span>
+                        <span class="skill-chip">Pandas</span>
+                        <span class="skill-chip">Matplotlib</span>
+                        <span class="skill-chip">NLP/NER</span>
+                        <span class="skill-chip">K-means</span>
+                        <span class="skill-chip">Prediction Models</span>
+                        <span class="skill-chip">Tableau</span>
+                        <span class="skill-chip">Dashboards</span>
+                    </div>
+                </div>
             </div>
         </section>
 
         <div class="nav-tabs">
             <a href="https://de.linkedin.com/in/lylan-bramasole-01031b157" target="_blank" class="nav-btn">LinkedIn</a>
             <a href="https://github.com/L-Bramasole" target="_blank" class="nav-btn">GitHub</a>
-            <a href="https://scholar.google.com/citations?hl=en&user=3_ZfOckAAAAJ" target="_blank" class="nav-btn">Scientific Papers</a>
+            <a href="https://scholar.google.com/citations?hl=en&user=3_ZfOckAAAAJ" target="_blank" class="nav-btn">Scientific Profile</a>
         </div>
 
         <h2 style="text-align:center; font-size: 2rem;">Projects</h2>
         <p style="text-align:center; font-style: italic; color: #666; margin-bottom: 40px;">"Let your project be my next Analysis"</p>
 
-        <a href="https://l-bramasole.github.io/German_2025_Job_Market_Strtegic_Analysis/" class="project-card">
-            <div class="project-image-placeholder">📊</div>
-            <div class="project-info">
-                <h3>German 2025 Job Market Strategic Analysis</h3>
-                <p>A deep dive into labor trends using advanced statistical modeling and Python visualization.</p>
-                <small style="color: #6c5ce7; font-weight: bold;">Click to view project →</small>
-            </div>
-        </a>
+        <div class="project-grid">
+            <a href="https://l-bramasole.github.io/German_2025_Job_Market_Strtegic_Analysis/" class="project-card">
+                <img src="GermanJobMarket.jpg" alt="German Job Market Analysis" class="project-image">
+                <div class="project-info">
+                    <h3>German 2025 Job Market Strategic Analysis</h3>
+                    <p>A deep dive into labor trends using advanced statistical modeling and Python visualization.</p>
+                    <small style="color: #6c5ce7; font-weight: bold;">Click to view project →</small>
+                </div>
+            </a>
+
+            <a href="https://l-bramasole.github.io/NYC_CitiBike-service_Stategic_Analysis/" class="project-card">
+                <img src="NYC-Citibike.jpg" alt="NYC CitiBike Analysis" class="project-image">
+                <div class="project-info">
+                    <h3>NYC CitiBike Service Strategic Analysis</h3>
+                    <p>Analyzing urban mobility patterns to optimize service distribution and user experience in New York City.</p>
+                    <small style="color: #6c5ce7; font-weight: bold;">Click to view project →</small>
+                </div>
+            </a>
+        </div>
     </div>
 
 </body>
