Fix image file extension from .jepg to .jpeg

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
                 <h1>Dr. Laylan Bramasole</h1>
                 <div class="role-tag">Data Analyst • PhD</div>
             </div>
-            <img src="Dr.Bramasole-Profile.jepg" alt="Dr. Bramasole" class="profile-img">
+            <img src="Dr.Bramasole-Profile.jpeg" alt="Dr. Bramasole" class="profile-img">
         </header>
 
         <section class="bio-section">
