--- a/index.html
+++ b/index.html
@@ -248,6 +248,14 @@
             box-shadow: 0 10px 20px rgba(108, 92, 231, 0.25);
         }
 
+        .nav-btn.resume-btn {
+            background: var(--text-dark);
+        }
+        
+        .nav-btn.resume-btn:hover {
+            background: #000;
+        }
+
         /* Project Gallery */
         .project-grid {
             display: grid;
@@ -400,6 +408,7 @@
         <section class="contact-section">
             <div class="contact-subtitle">Collaborate with me</div>
             <div class="nav-tabs">
+                <a href="Dr.Laylan Bramasole-Resume.pdf" target="_blank" class="nav-btn resume-btn">Resume</a>
                 <a href="mailto:laylan.bramasole@gmail.com" class="nav-btn">E-mail</a>
                 <a href="https://de.linkedin.com/in/lylan-bramasole-01031b157" target="_blank" class="nav-btn">LinkedIn</a>
                 <a href="https://github.com/L-Bramasole" target="_blank" class="nav-btn">GitHub</a>
