Fix Resume link and clean up button styles
Updated the Resume link to use the correct file name and removed the specific resume button styling.

--- a/index.html
+++ b/index.html
@@ -240,20 +240,14 @@
             display: flex;
             align-items: center;
             gap: 8px;
+            border: none;
+            cursor: pointer;
         }
 
         .nav-btn:hover {
             background: var(--hover-purple);
             transform: translateY(-3px);
             box-shadow: 0 10px 20px rgba(108, 92, 231, 0.25);
-        }
-
-        .nav-btn.resume-btn {
-            background: var(--text-dark);
-        }
-        
-        .nav-btn.resume-btn:hover {
-            background: #000;
         }
 
         /* Project Gallery */
@@ -408,7 +402,8 @@
         <section class="contact-section">
             <div class="contact-subtitle">Collaborate with me</div>
             <div class="nav-tabs">
-                <a href="Dr.Laylan Bramasole-Resume.pdf" target="_blank" class="nav-btn resume-btn">Resume</a>
+                <!-- Updated Resume Tab with purple color and correct spacing handle -->
+                <a href="Dr.Laylan%20Bramasole-Resume.pdf" target="_blank" class="nav-btn">Resume</a>
                 <a href="mailto:laylan.bramasole@gmail.com" class="nav-btn">E-mail</a>
                 <a href="https://de.linkedin.com/in/lylan-bramasole-01031b157" target="_blank" class="nav-btn">LinkedIn</a>
                 <a href="https://github.com/L-Bramasole" target="_blank" class="nav-btn">GitHub</a>
